--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@ build/
 
 ### VS Code ###
 .vscode/
+
+*.iml
+bower_components
+node_modules
+node
+*.log
+asciidoctor.css
+built
+dump.rdb
+package-lock.json
